# aethra

./: .gitignore  README.md  index.js  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  vercel.json
aethra/: __init__.py  __main__.py  api_schema.py  cli.py  config.py  execution_delivery.py  operator_autonomous.py  orchestrator.py  output_formatter.py  public_output.py  registry.py  schema_envelope.py  signal_compress.py  util_json.py
aethra-core/: index.js  index.ts  system.identity.js  system.identity.ts  utils.js
aethra-core/agents/: executor.js  executor.ts  handoff.protocol.ts  registry.js  registry.ts  scs.ts  skill.engine.ts
aethra-core/ai/: router.js  router.ts
aethra-core/antifragility/: pipeline.ts  plugin.v12.ts
aethra-core/api/: routes.js
aethra-core/arbitrage/: engine.js  engine.ts
aethra-core/autonomy/: plugin.v8.ts
aethra-core/capital/: allocation.engine.js  allocation.engine.ts  allocator.js  allocator.ts  flowEnergy.js  flowEnergy.ts  mode.engine.js  mode.engine.ts  plugin.v7.ts  roi.engine.js  roi.engine.ts  scaling.engine.js  scaling.engine.ts
aethra-frontend/: next.config.ts  package-lock.json  package.json
core/: organismApi.js  protection.js  repoPaths.ts  tsconfig.json  types.ts
scripts/: smoke.js  stress-selftest.js
server/: index.ts
web/: aethra-capital-dashboard.html  aethra-capital-dashboard.js  aethra-dashboard.js  aethra.html  ageGate.js  app.html  app.js  business.html  ideas.html  index.html  portfolio.html  report.html  styles.css  unified-system.css  unified-system.js
(+899 files in other folders)
