[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aethra-qppp"
version = "0.1.0"
description = "AETHRA Q+++ — governed deterministic economic intelligence system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3"]

[project.scripts]
aethra = "aethra.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aethra*"]

[tool.ruff]
line-length = 100
target-version = "py311"
